fix z-index of nav

--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,16 @@ body {
 }
 nav {
   white-space: nowrap;
-  background: rgba(255, 255, 255, 0.400);
+  background: rgba(255, 255, 255, .7);
+  height: 85px;
+  position:sticky;
+  top:0;
+  z-index: 3;
 }
 
 ul {
   list-style: none;
-  padding: 50px 50px 0;
+  padding: 20px 55px 0;
 }
 
 li a {
@@ -39,7 +43,6 @@ div {
 #email-logo {
 visibility: hidden;
 }
-
 
 #card-container {
   display: flex;
@@ -74,7 +77,7 @@ visibility: hidden;
   #email-logo {
     visibility: visible;
     max-width: 20%;
-    /* height: auto; */
+    height: auto;
     margin: 0 5px;
   }
 
@@ -89,6 +92,7 @@ visibility: hidden;
   nav {
     white-space: nowrap;
     background: rgba(255, 255, 255, 0.400);
+    height: auto;
   }
   
   ul {
